# skulk

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  rust-toolchain.toml  skulk.toml
.github/workflows/: release.yml
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/client/tests/: roundtrip.rs
crates/contract/: Cargo.toml
crates/contract/src/: command.rs  envelope.rs  error.rs  event.rs  ids.rs  lib.rs  manifest.rs  response.rs
crates/contract/tests/: roundtrip.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  loot.rs
crates/engine/tests/: heartbeat.rs  loop.rs  loot.rs  loot_fetch.rs  shutdown.rs
crates/lcd-render/: Cargo.toml
crates/lcd-render/src/: driver_gpio_buttons.rs  driver_mipidsi.rs  form.rs  hud.rs  input.rs  lib.rs  menu.rs  textview.rs  theme.rs
crates/module-sdk/: Cargo.toml
crates/module-sdk/src/: lib.rs
crates/modules/battery/: Cargo.toml
crates/modules/battery/src/: ina219.rs  lib.rs
crates/modules/dns-recon/: Cargo.toml
crates/modules/dns-recon/src/: lib.rs
crates/modules/dns-recon/tests/: recon.rs
crates/modules/portscan/: Cargo.toml
crates/modules/portscan/src/: lib.rs
crates/modules/portscan/tests/: scan.rs
crates/modules/services/: Cargo.toml
crates/modules/services/src/: lib.rs
crates/modules/services/tests/: detect.rs
crates/modules/sysinfo/: Cargo.toml
crates/modules/sysinfo/src/: lib.rs
crates/modules/temp/: Cargo.toml
crates/modules/temp/src/: lib.rs
crates/skulk-cli/: Cargo.toml
crates/skulk-cli/src/: main.rs
crates/skulk-tui/: Cargo.toml
crates/skulk-tui/src/: app.rs  main.rs  ui.rs
crates/skulkd/: Cargo.toml
crates/skulkd/src/: caps.rs  config.rs  main.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs
crates/transport/tests/: tcp.rs
scripts/: demo.ps1  skulk-deploy.sh
themes/example/: theme.toml
