[workspace]
resolver = "2"
members = [
    "crates/contract",
    "crates/module-sdk",
    "crates/engine",
    "crates/transport",
    "crates/client",
    "crates/skulk-cli",
    "crates/skulk-tui",
    "crates/skulkd",
    "crates/lcd-render",
    "crates/modules/sysinfo",
    "crates/modules/portscan",
    "crates/modules/services",
    "crates/modules/dns-recon",
]
