[package]
name = "engine"
version = "0.1.0"
edition = "2021"
description = "Event bus, module registry and dispatcher for the implant"

[dependencies]
contract = { path = "../contract" }
module-sdk = { path = "../module-sdk" }
async-trait = "0.1"
serde_json = "1"
redb = "2"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }

[dev-dependencies]
example-sysinfo = { path = "../modules/sysinfo" }
