[package]
name = "module-sdk"
version = "0.1.0"
edition = "2021"
description = "Trait + context a module author builds against (depends only on the contract)"

[dependencies]
contract = { path = "../contract" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
