[package]
name = "skulk-tui"
version = "0.1.0"
edition = "2021"
description = "Skulk operator TUI — a ratatui dashboard over the client library"

[dependencies]
contract = { path = "../contract" }
client = { path = "../client" }
serde_json = "1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
