[package]
name = "dns-recon"
version = "0.1.0"
edition = "2021"
description = "dns.records module: standard record enumeration + AXFR zone transfer probe"

[dependencies]
contract = { path = "../../contract" }
module-sdk = { path = "../../module-sdk" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio = { version = "1", features = ["net", "time"] }
hickory-resolver = "0.25"
hickory-client = "0.25"

[dev-dependencies]
engine = { path = "../../engine" }
hickory-proto = "0.25"
tokio = { version = "1", features = ["net", "time", "rt", "rt-multi-thread", "macros", "sync"] }
