[package]
name = "net-portscan"
version = "0.1.0"
edition = "2021"
description = "net.port_scan module: unprivileged async TCP connect scan"

[dependencies]
contract = { path = "../../contract" }
module-sdk = { path = "../../module-sdk" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio = { version = "1", features = ["net", "time"] }

[dev-dependencies]
engine = { path = "../../engine" }
tokio = { version = "1", features = ["net", "time", "rt", "rt-multi-thread", "macros", "sync"] }
