[package]
name = "net-services"
version = "0.1.0"
edition = "2021"
description = "net.services module: service/version detection (banner + HTTP probe), native Rust"

[dependencies]
contract = { path = "../../contract" }
module-sdk = { path = "../../module-sdk" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio = { version = "1", features = ["net", "io-util", "time"] }

[dev-dependencies]
engine = { path = "../../engine" }
tokio = { version = "1", features = ["net", "io-util", "time", "rt", "rt-multi-thread", "macros", "sync"] }
