[package]
name = "sys-temp"
version = "0.1.0"
edition = "2021"
description = "sys.temp module: CPU/SoC thermal-zone monitoring, ambient HUD-ready"

[dependencies]
contract = { path = "../../contract" }
module-sdk = { path = "../../module-sdk" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
